Registrar archivos que no son clases de PHP, para que composer los cargue de forma global

--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
         "classmap": [
             "database/seeds",
             "database/factories"
-        ]
+        ],
+        "files": ["app/utilities.php"]
     },
     "autoload-dev": {
         "psr-4": {
