--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=235d6f907cd716aae43d",
+    "/css/app.css": "/css/app.css?id=6150c46a61f2a85aaf64"
 }
